# ctorch

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: ctorch_blas.cmake  ctorch_cuda.cmake  ctorch_options.cmake  ctorch_sanitizers.cmake  ctorch_test.cmake  ctorch_warnings.cmake
docs/: ops.md
include/ctorch/: allocator.h  device.h  dispatch.h  dtype.h  errors.h  intrusive_ptr.h  storage.h  tensor.h  type_promotion.h
include/ctorch/ops/: elementwise.h  indexing.h  linalg.h  op_keys.h  reduction.h
scripts/: gen_parity.py
src/: CMakeLists.txt  storage.cpp  tensor.cpp  type_promotion.cpp
src/allocators/: counting_allocator.h  cpu_pool.cpp  cpu_pool.h  cuda_caching.cpp  cuda_caching.h  default_allocator.cpp
src/cuda/: device_guard.h  stream.cpp  stream.h
src/linalg/: blas.h  blas_cpu.cpp  blas_cuda.cu
src/ops/: binary_ops_cpu.cpp  binary_ops_cuda.cu  broadcast.cpp  broadcast.h  cast_cpu.cpp  cast_cpu.h  functors.h  indexing_cpu.cpp  indexing_cuda.cu  matmul.cpp  matmul_cpu.cpp  matmul_cuda.cu  matmul_shape.cpp  matmul_shape.h  reduction.cpp  reduction.h  reduction_functors.h  reduction_iter.cpp  reduction_iter.h  reduction_ops_cpu.cpp  reduction_ops_cuda.cu  tensor_iter.cpp  tensor_iter.h  unary_ops_cpu.cpp  unary_ops_cuda.cu
tests/: CMakeLists.txt
tests/allocator/: CMakeLists.txt  counting_allocator_test.cpp  cpu_pool_test.cpp  cuda_caching_test.cpp
tests/bench/: CMakeLists.txt  add_bench.cpp  reference_add_kernel.cu  reference_add_kernel.h  reference_cub_sum.cu  reference_cub_sum.h  sum_bench.cpp
tests/dispatch/: CMakeLists.txt  dispatch_test.cpp
tests/ops/: CMakeLists.txt  binary_test.cpp  broadcast_test.cpp  cuda_smoke_test.cpp  index_select_dtype_test.cpp  index_select_test.cpp  inplace_test.cpp  matmul_cuda_test.cpp  matmul_dtype_test.cpp  matmul_shape_test.cpp  promotion_test.cpp  reduction_alloc_test.cpp  reduction_axis_test.cpp  reduction_dtype_test.cpp  reduction_value_test.cpp  transpose_test.cpp  unary_test.cpp
tests/parity/: CMakeLists.txt  binary_parity_test.cpp  indexing_parity_test.cpp  load_npy.cpp  load_npy.h  matmul_parity_test.cpp  reduction_parity_test.cpp  unary_parity_test.cpp
tests/parity/fixtures/: abs_float32_3x4_in.npy  abs_float32_3x4_ref.npy  abs_int64_5_in.npy  add_float32_3x1_1x4_a.npy  add_float32_3x1_1x4_b.npy  add_float32_3x1_1x4_ref.npy  add_float32_3x4_3x4_a.npy  add_float32_3x4_3x4_b.npy  add_float32_3x4_3x4_ref.npy  add_float64_5_5_a.npy  add_float64_5_5_b.npy  add_float64_5_5_ref.npy  add_int32_4_4_a.npy  add_int32_4_4_b.npy  add_int32_4_4_ref.npy  add_int64_2x3_3_a.npy  add_int64_2x3_3_b.npy  add_int64_2x3_3_ref.npy  argmax_float32_3x4_dim1_kd0_in.npy  argmax_float32_5_dim0_kd0_tied_in.npy  argmin_int64_5_dim0_kd0_in.npy  div_float32_4x4_4x4_a.npy  div_float32_4x4_4x4_b.npy  div_float32_4x4_4x4_ref.npy  div_float64_3_3_a.npy  div_float64_3_3_b.npy  div_float64_3_3_ref.npy  exp_float32_4_in.npy  exp_float32_4_ref.npy  exp_float64_4_in.npy  exp_float64_4_ref.npy  index_select_float32_2x3x4_dim1_int64_n3_in.npy  index_select_float32_2x3x4_dim1_int64_n3_ref.npy  index_select_float32_3x4_dim1_int32_n3_idx.npy  index_select_float32_3x4_dim1_int32_n3_in.npy  index_select_float32_3x4_dim1_int32_n3_ref.npy  index_select_float32_4x3_dim0_int64_n4_in.npy  index_select_float32_4x3_dim0_int64_n4_ref.npy  index_select_float64_5_dim0_int64_n3_idx.npy  index_select_float64_5_dim0_int64_n3_in.npy  (+111 more)
tests/smoke/: smoke_test.cpp
tests/storage/: CMakeLists.txt  storage_cuda_test.cpp  storage_refcount_test.cpp
tests/tensor/: CMakeLists.txt  slice_test.cpp  tensor_to_device_test.cpp  tensor_view_test.cpp  view_alias_test.cpp
